// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`GUI Label correctly renders a "guilabel" role 1`] = `
<DocumentFragment>
  .emotion-0 {
  font-style: normal;
  font-weight: 700;
}

<span
    class="guilabel emotion-0"
  >
    Yes
  </span>
</DocumentFragment>
`;

exports[`Highlight correctly renders a "highlight-blue" role 1`] = `
<DocumentFragment>
  .emotion-0 {
  background-color: #E1F7FF;
}

<span
    class="emotion-0"
  >
    I am so blue
  </span>
</DocumentFragment>
`;
